--- a/Style.css
+++ b/Style.css
@@ -224,10 +224,42 @@ body{
 }
 
 .btn {
-  margin-left: 140px;
-  margin-right: auto;
-  text-align: justify;
-  margin-top: 10px;
+  z-index:2;
   cursor: pointer;
-  z-index: 20;
+  font-size:16px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 100px; 
+  text-decoration: none;
+  text-transform: uppercase;
+  justify-content: center;
+  padding: 1em;
+  text-align: center;
+  color: white;
+  margin-right: 2em;
+  margin-left: auto;
+}
+
+.btn-5 {
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, .5);
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+} 
+
+.btn-5:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388; 
+}
+
+.nav {
+  position: relative;
+  z-index:2;
+  padding-top: 2em;
 }
