--- a/Style.css
+++ b/Style.css
@@ -1,268 +1,270 @@
 body, html {
-    height: 100%;
+  height: 100%;
 }
 
-#menu__toggle {
-  opacity: 0;
-}
-#menu__toggle:checked + .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked + .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0deg);
-}
-#menu__toggle:checked + .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-  left: 0 !important;
-}
-.menu__btn {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  width: 26px;
-  height: 26px;
+.logo {
+  height: 55px;
+  width: 55px;
+  padding-top: 10px;
+  padding-left: 10px;
+  animation: fadeIn 300ms ease-in;
   cursor: pointer;
-  z-index: 3;
-}
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: azure;
-  transition-duration: .25s;
-}
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 8px;
-}
-.menu__box {
-  display: block;
+  transition: all .2s ease-in-out;
   position: fixed;
-  top: 0;
-  left: -100%;
-  width: 300px;
-  height: 100%;
-  margin: 0;
-  padding: 80px 0;
-  list-style: none;
-  background-color: #272160;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-  transition-duration: .25s;
   z-index: 2;
 }
-.menu__item {
-  display: block;
-  padding: 12px 24px;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  text-decoration: none;
-  transition-duration: .25s;
-}
-.menu__item:hover {
-  background-color: #CFD8DC;
+
+.logo:hover {
+  transform: scale(1.2);
 }
 
+@keyframes fadeIn{
+  0%{
+    opacity: 0
+  }
+
+  100%{
+    opacity: 1
+  }
+}
+
+/* Background Colour and middle text*/
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
 *{
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 body{
-    font-family: 'Exo', sans-serif;
+  font-family: 'Exo', sans-serif;
 }
 
 
 .context {
-    width: 100%;
-    position: absolute;
-    top:50vh;
-    
+  width: 100%;
+  position: absolute;
+  top:30vh;
+  
 }
 
-.context h1{
-    text-align: center;
-    color: #fff;
-    font-size: 50px;
-}
-
-
-.area{
-    background: #4e54c8;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
-    width: 100%;
-    height:100vh;
-    
-   
-}
-
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-    
-}
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
-}
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-
-@keyframes animate {
-
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
-
-}
-
-/* All of the .btn, .btn-5 and .btn-5:hover is from your website. whenever you see an example online
-you basically just need to copy and paste the css here and the html in the html file then wire up the class/id names */
-
-.btn {
-  z-index:2;
-  cursor: pointer;
-  font-size:16px;
-  font-weight: 400;
-  line-height: 45px;
-  max-width: 100px; 
-  text-decoration: none;
-  text-transform: uppercase;
-  justify-content: center;
-  padding: 1em;
+.hugo-spear h1{
   text-align: center;
-  color: white;
-  margin-right: 2em;
-  margin-left: auto;
+  color: #ccd6f6;
+  font-size: 85px;
+  animation: article-load 300ms ease-in;
+  animation-delay: 1.3s;
+  animation-fill-mode: both;
 }
 
-.btn-5 {
-  border: 0 solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-  outline: 1px solid;
-  outline-color: rgba(255, 255, 255, .5);
-  outline-offset: 0px;
-  text-shadow: none;
-  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-} 
+.coding-portfolio h1{
+  text-align: center;
+  color: #8892b0;
+  font-size: 85px;
+  padding-top: 0;
+  animation: article-load 300ms ease-in;
+  animation-delay: 1.6s;
+  animation-fill-mode: both;
+}
 
-.btn-5:hover {
-  border: 1px solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 15px;
-  text-shadow: 1px 1px 2px #427388; 
+.tagline p{
+  color: #64ffda;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+  text-align: center;
+  font-size: larger;
+  animation: article-load-up 300ms ease-in;
+  animation-delay: 2.2s;
+  animation-fill-mode: both;
+}
+
+@keyframes article-load {
+0%{
+  transform: translateY(-20px);
+  opacity: 0;
+}
+
+
+100%{
+  transform: translateY(0);
+  opacity: 1;
+}
+}
+
+@keyframes article-load-up {
+  0%{
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  
+  
+  100%{
+    transform: translateY(0);
+    opacity: 1;
+  }
+  }
+
+.area {
+  background: #0a192f;   
+  width: 100%;
+  height:100vh;
 }
 
 .nav {
-  position: relative;
-  z-index:2;
-  padding-top: 2em;
+position: relative;
+z-index:2;
+padding: 1em;
+}
+
+/*animation for buttons*/
+.btn-5 {
+  margin: 15px;
+	border: 0;
+	padding: 5px 10px;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+	font-size: 16pt;
+	color: #64ffda;
+	cursor: pointer;
+	background: transparent;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+  float: right;
+  text-decoration: none;
+}
+
+.btn-6 {
+  margin: 15px;
+	border: 0;
+	padding: 5px 10px;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+	font-size: 16pt;
+	color: #64ffda;
+	cursor: pointer;
+	background: transparent;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+  float: right;
+  text-decoration: none;
+}
+
+.btn-7 {
+  margin: 15px;
+	border: 0;
+	padding: 5px 10px;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+	font-size: 16pt;
+	color: #64ffda;
+	cursor: pointer;
+	background: transparent;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+  float: right;
+  text-decoration: none;
+}
+
+.btn-5 {
+  animation: article-load 300ms ease-in;
+  animation-delay: 500ms;
+  animation-fill-mode: both;
+}
+
+.btn-6 {
+  animation: article-load 300ms ease-in;
+  animation-delay: 300ms;
+  animation-fill-mode: both;
+}
+
+.btn-7 {
+  animation: article-load 300ms ease-in;
+  animation-delay: 100ms;
+  animation-fill-mode: both;
+}
+
+.btn-5:after {
+	content: '';
+	height: 3px;
+	width: 100%;
+	background: #64ffda;
+	display: block;
+	margin-top: 1px;
+	-webkit-transform: translateY(5px);
+	-moz-transform: translateY(5px);
+	-ms-transform: translateY(5px);
+	-o-transform: translateY(5px);
+	transform: translateY(5px);
+	opacity: 0;
+	-webkit-transition: all .2s linear;
+	-moz-transition: all .2s linear;
+	-ms-transition: all .2s linear;
+	-o-transition: all .2s linear;
+	transition: all .2s linear;
+}
+
+.btn-5:hover:after {
+	opacity: 1;
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+}
+
+.btn-6:after {
+	content: '';
+	height: 3px;
+	width: 100%;
+	background: #64ffda;
+	display: block;
+	margin-top: 1px;
+	-webkit-transform: translateY(5px);
+	-moz-transform: translateY(5px);
+	-ms-transform: translateY(5px);
+	-o-transform: translateY(5px);
+	transform: translateY(5px);
+	opacity: 0;
+	-webkit-transition: all .2s linear;
+	-moz-transition: all .2s linear;
+	-ms-transition: all .2s linear;
+	-o-transition: all .2s linear;
+	transition: all .2s linear;
+}
+
+.btn-6:hover:after {
+	opacity: 1;
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+}
+
+.btn-7:after {
+	content: '';
+	height: 3px;
+	width: 100%;
+	background: #64ffda;
+	display: block;
+	margin-top: 1px;
+	-webkit-transform: translateY(5px);
+	-moz-transform: translateY(5px);
+	-ms-transform: translateY(5px);
+	-o-transform: translateY(5px);
+	transform: translateY(5px);
+	opacity: 0;
+	-webkit-transition: all .2s linear;
+	-moz-transition: all .2s linear;
+	-ms-transition: all .2s linear;
+	-o-transition: all .2s linear;
+	transition: all .2s linear;
+}
+
+.btn-7:hover:after {
+	opacity: 1;
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
 }
