--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,14 @@
 body, html {
-  height: 100%;
+
+  background-color: #0a192f;
+  font-family: 'Exo', sans-serif;
+  
+}
+
+section {
+	min-height: 100vh;
+	justify-content: center;
+	align-items: center;
 }
 
 .logo {
@@ -34,10 +43,6 @@ body, html {
 *{
   margin: 0px;
   padding: 0px;
-}
-
-body{
-  font-family: 'Exo', sans-serif;
 }
 
 
@@ -102,12 +107,6 @@ body{
     opacity: 1;
   }
   }
-
-.area {
-  background: #0a192f;   
-  width: 100%;
-  height:100vh;
-}
 
 .nav {
 position: relative;
@@ -267,4 +266,45 @@ padding: 1em;
 	-ms-transform: translateY(0);
 	-o-transform: translateY(0);
 	transform: translateY(0);
+}
+
+/* Section 2*/
+
+
+
+section:nth-child(2){
+	color: #ccd6f6;
+}
+
+section .container {
+	margin: 0;
+	margin-bottom: 0;
+}
+
+section h2 {
+	font-size: 45px;
+	text-align: center;
+	text-transform: uppercase;
+	justify-content: center;
+	align-items: center;
+
+}
+
+section .cards{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+section .cards .text-card {
+	margin: 85px;
+	padding: 85px;
+	border: 1px solid #64ffda;
+}
+
+section .cards .text-card h3 {
+	font-size: 30px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 10px;
 }
